# web-pdf-editor

./: .gitignore  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy-pages.yml
app/: .eslintrc.js  Dockerfile  package-lock.json  package.json  vue.config.js
app/src/: App.vue  main.js
crates/pdf-wasm/: Cargo.toml
crates/pdf-wasm/src/: edit.rs  lib.rs
e2e/: capture-screenshots.spec.ts  generate-fixtures.mjs
e2e/helpers/: pdf-editor.ts
e2e/scenarios/: pattern-a-upload-view.spec.ts  pattern-b-edit-save.spec.ts  pattern-c-edit-management.spec.ts  pattern-d-multi-page.spec.ts  pattern-e-display-style.spec.ts  pattern-f-validation.spec.ts  pattern-g-full-journey.spec.ts  pattern-h-advanced-edit.spec.ts
front/: .babelrc  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
front/src/: App.vue  main.js
public/pdfium/: pdfium.js
scripts/: setup-fonts.mjs  setup-pdfium.mjs
src/: App.css  App.tsx  index.css  main.tsx
src/components/: EditOverlay.tsx  EditToolbar.tsx  ErrorBoundary.tsx  FontFamilySelect.tsx  PdfUploader.tsx  PdfViewer.tsx  TextInputPopup.tsx  Toast.tsx
src/context/: PdfViewerContext.tsx
src/hooks/: useEditTools.ts  usePdfPanZoom.ts  usePdfProcessor.ts  usePdfRenderer.ts  useWasm.ts
src/lib/: coordinates.ts  fonts.ts  pdfProcessor.ts
src/types/: pdf.ts
src/wasm/: package.json  pdf_wasm.d.ts  pdf_wasm.js  pdf_wasm_bg.wasm  pdf_wasm_bg.wasm.d.ts
wasm/: Cargo.toml  Dockerfile  LICENSE_MIT
(+10 files in other folders)
