[package]
name = "pdf-wasm"
version = "0.1.0"
edition = "2021"
description = "Custom PDF edit + render engine (Rust WASM + PDFium)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
harumi = { version = "1.1.0", features = ["draw"] }
hex = "0.4"
js-sys = "0.3"
once_cell = "1"
pdfium-render = { version = "0.9", default-features = false, features = ["pdfium_7543", "image_latest", "console_log"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["ImageData"] }
